# mpl-typst

./: .gitignore  .mailmap  CHANGELOG.md  README.md  backend_typst.py  pyproject.toml  run.py
.github/scripts/: run-dirty-tests.sh
.github/workflows/: on-push.yml  on-release.yml  on-schedule.yml
gallery/: README.md  hist-hatched.py  line-plot-simple.py  main.typ  makefile  pcolor.py  spy.py  text-colored.py
mpl_typst/: __init__.py  as_default.py  aux.py  backend.py  backend_test.py  config.py  config_test.py  measure.typ  prologue.typ  regression_test.py  testing.py  typst.py  typst_test.py
tests/regression/: issue32_test.py
